# movieindex

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  POETRY_MIGRATION.md  README.md  login_plan.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: auth.py  create_tables.py  database.py  db_models.py  handler.py  main.py  models.py  requirements.txt  route_constants.py  settings.py  test.py
app/: index.html  package-lock.json  package.json
app/src/: index.tsx  stack.ts
scripts/: dev.py
